# ex_2_skeleton

./: CMakeLists.txt  README.md
docs/: HLD.md
include/cpp_course/: DroneControlImpl.h  IDroneControl.h  IDroneMovement.h  IGPS.h  ILidar.h  IMap3D.h  IMappingAlgorithm.h  IMissionControl.h  IMutableMap3D.h  ISimulation.h  ISimulationRun.h  ISimulationRunFactory.h  Map3DImpl.h  MappingAlgorithmImpl.h  MapsComparison.h  MissionControlImpl.h  MockGPS.h  MockLidar.h  MockMovement.h  ScanResultToVoxels.h  SimulationManager.h  SimulationRunFactoryImpl.h  SimulationRunImpl.h  Types.h  Units.h
include/drone_mapper/: IMappingAlgorithm.h
include/drone_mapper/types/: MissionTypes.h
src/: DroneControlImpl.cpp  Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockGPS.cpp  MockLidar.cpp  MockMovement.cpp  ScanResultToVoxels.cpp  SimulationManager.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
